Added migration and model to article

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,2 +1,6 @@
 <h1>Articles#show</h1>
 <p>Find me in app/views/articles/show.html.erb</p>
+<div>
+  <h2>Title: <%= @article.title %></h2>
+  <p>Text: <%= @article.text %></p>  
+</div>
