--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,2 +1,8 @@
-<h1>Articles#index</h1>
-<p>Find me in app/views/articles/index.html.erb</p>
+<h1>Listing articles</h1>
+
+<% @articles.each do |article| %>
+  <div>
+    <h2>Title: <%= article.title %></h2>
+    <p>Text: <%= article.text %></p>
+  </div>
+<% end %>
