--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,7 +1,7 @@
 <h1>Articles#new</h1>
 <p>Find me in app/views/articles/new.html.erb</p>
 
-<%= form_for :article do |f| %>
+<%= form_for :article, url: articles_path do |f| %>
   <p>
     <%= f.label :title %> <br>
     <%= f.text_field :title %>
