--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Listing articles</h1>
+<h1>Articles - <%= link_to "(+)", new_article_path() %></h1>
 
 <% @articles.each do |article| %>
   <div>
-    <h2>Title: <%= article.title %></h2>
-    <p>Text: <%= article.text %></p>
+    <h2><%= link_to article.title, article_path(article) %></h2>
+    <p><%= article.text %></p>
   </div>
 <% end %>
