Create, Read, Update and Destroy functioning for Articles

--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -2,4 +2,5 @@
 
 <%= render 'form' %>
 
+<h2><%= link_to "(delete article)", article_path(@article), method: :delete, data: { confirm: 'Are you sure?'} %></h2>
 <%= link_to "Back to Articles", articles_path() %>
