--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -2,7 +2,7 @@
 
 <% @articles.each do |article| %>
   <div>
-    <h2><%= link_to article.title, article_path(article) %> <%= link_to "(edit)", edit_article_path(article) %></h2>
+    <h2><%= link_to article.title, article_path(article) %> <%= link_to "(edit)", edit_article_path(article) %> <%= link_to "(destroy)", article_path(article), method: :delete, data: { confirm: 'Are you sure?'} %></h2>
     <p><%= article.text %></p>
   </div>
 <% end %>
