--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,8 @@
-<h2>New Article</h2>
-
+<div class="contentTitle">
+  <h2>New Article</h2>
+</div>
 <%= render 'form' %>
 
-<%= link_to "Back to Articles", articles_path() %>
+<div class="contentEndLinks">
+  <%= link_to "Back to Articles", articles_path() %>
+</div>
