--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -15,21 +15,10 @@
 
   <div class="commentForm">
     <h2>Add a comment</h2>
-    <%= form_for ([@article, @article.comments.build]) do |f| %>
-    <p>
-      <%= f.label :commenter %><br>
-      <%= f.text_field :commenter %>
-    </p>
-    <p>
-      <%= f.label :body %><br>
-      <%= f.text_area :body %>
-    </p>
-    <p>
-      <%= f.submit %>
-    </p>
-    <% end %>
+    <%= render 'comments/form' %>
   </div>
 </div>
+
 <div class="contentEndLinks">
   <%= link_to "Back to Articles", articles_path() %>
 </div>
