--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -2,4 +2,5 @@
 <div class="commentSub">
   <h3> Commenter: <%= comment.commenter %></h3>
   <p> Comment: <%= comment.body %></p>
+  <p><%= link_to "Delete", [comment.article, comment], method: :delete, data: { confirm: 'Are you sure?'} %></p>
 </div>
