Filled seeds.rb file with giberish, made http_basic_authenticate_with security for articles and comments

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,2 @@
-<h1>Welcome#index</h1>
-<p>Find me in app/views/welcome/index.html.erb</p>
+<p>Welcome to the website blog!</p>
+<p> Checkout the articles <%= link_to "here",  articles_path() %>
